--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.8",
+    "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-simple-maps": "^3.0.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
